--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -6,7 +6,33 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="co.gon_htn.gon.MenuActivityFragment">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/action_add_event"
+            android:id="@+id/btn_add_event"
+            android:textStyle="bold"
+            android:textColor="@color/White"
+            android:background="@color/Carrot"
+            android:textSize="30dp" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:id="@+id/scrollView" >
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/list_events"></LinearLayout>
+        </ScrollView>
+    </LinearLayout>
 
 </RelativeLayout>
