--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -48,7 +48,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:inputType="date"
-                android:id="@+id/start_Date"
+                android:id="@+id/start_date"
                 android:hint="@string/event_start_date"
                 android:textSize="20dp"
                 android:layout_marginLeft="2dp"
