--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -31,7 +31,8 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/list_events"></LinearLayout>
+                android:id="@+id/list_events">
+            </LinearLayout>
         </ScrollView>
     </LinearLayout>
 
