--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
     <color name="White">#ffffff</color>
     <color name="DarkGrey">#34495e</color>
     <color name="Green">#27ae60</color>
+    <color name="Cloud">#ecf0f1</color>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
