--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -18,8 +18,9 @@
             android:id="@+id/btn_add_event"
             android:textStyle="bold"
             android:textColor="@color/White"
-            android:background="@color/Carrot"
-            android:textSize="30dp" />
+            android:background="@color/DarkGrey"
+            android:textSize="30dp"
+            android:layout_marginBottom="50dp" />
 
         <ScrollView
             android:layout_width="match_parent"
