--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -67,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/event_items"
-                android:id="@+id/textView"
+                android:id="@+id/user_items_label"
                 android:layout_marginTop="10dp"
                 android:textSize="20dp"
                 android:layout_marginLeft="5dp"
@@ -94,6 +94,18 @@
                     android:id="@+id/user_item_1"
                     android:inputType="text" />
             </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/recommended_items"
+                android:id="@+id/rec_items_label"
+                android:layout_marginTop="10dp"
+                android:textSize="20dp"
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/Carrot"
+                android:textStyle="bold"
+                android:visibility="invisible"/>
 
             <LinearLayout
                 android:orientation="vertical"
